# devops-portal

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tailwind.config.js  tailwind.input.css
.claude/: settings.json
alembic/: env.py
ansible/: deploy.yml  env.j2  inventory.ini.example  requirements.yml  test_collections.yml
app/: config.py  main.py
docker/: entrypoint-worker.sh
docs/: admin-guide.md  api-reference.md  architecture-improvement-plan.md  architecture-review-2026-07-17.md  architecure.md  code-quality-remediation-plan.md  concept.md  pr-review-254.md  project-review-2026-07-10.md  security-review.md  vcd-cloud-init-template.md
mcp_server/: __init__.py  __main__.py  config.py  portal_client.py  server.py
terraform/: mirror.tf  terraformrc
tests/: conftest.py  test_admin_catalog_ui.py  test_admin_error_escape.py  test_admin_force_delete.py  test_admin_password_guard.py  test_aggregate_transition_guard.py  test_api_bookings.py  test_api_namespaces.py  test_api_v1_routes.py  test_as_tz_filter.py  test_audit_log.py  test_audit_log_ui.py  test_auth.py  test_beat_tasks.py  test_blueprint_ansible_vars.py  test_booking_configuring_state.py  test_booking_filter.py  test_booking_label.py  test_booking_queue.py  test_booking_row_ownership.py  test_booking_status_invariant.py  test_bookings_list_authz.py  test_change_password.py  test_create_booking.py  test_create_user_password_check.py  test_dispatcher_on_behalf.py  (+69 more)
(+297 files in other folders)
